[package]
name = "const_fn"
version = "0.4.3"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/const_fn"
homepage = "https://github.com/taiki-e/const_fn"
documentation = "https://docs.rs/const_fn"
keywords = ["macros", "attribute", "const", "static"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
description = """
An attribute for easy generation of const functions with conditional compilations.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["test_suite"]

[lib]
proc-macro = true
